--- a/src/pages/flight/index/index.scss
+++ b/src/pages/flight/index/index.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/iconfont/iconfont.css';
+@import "../../../assets/iconfont/iconfont.css";
 
 .flight-top {
   background: #fff;
@@ -11,25 +11,27 @@
   border-left: 1px solid #efefef;
   border-right: 1px solid #efefef;
   margin-top: 168px;
-}
-.item {
-  font-size: 44px;
-  position: relative;
-  font-weight: 600;
-  height: 112px;
-  line-height: 112px;
-  border-bottom: 1px solid #eee;
-  display: flex;
-  &.date {
-    border-bottom: none!important;
+  .item {
+    font-size: 44px;
+    position: relative;
+    font-weight: 600;
+    height: 112px;
+    line-height: 112px;
+    border-bottom: 1px solid #eee;
+    display: flex;
+    &.date {
+      border-bottom: none !important;
+    }
   }
 }
-.station .from, .station .to {
+.station .from,
+.station .to {
   width: 45%;
   opacity: 1;
   transition: all 0.5s ease-out;
 }
-.flight .station .from, .flight .station .to {
+.flight .station .from,
+.flight .station .to {
   transition: all 0.4s ease-out;
   width: 50%;
   white-space: nowrap;
@@ -74,22 +76,22 @@
   font-weight: bolder;
 }
 
-.icon-zhihuan{
+.icon-zhihuan {
   &.active {
-    animation: rotate .5s ease;
+    animation: rotate 0.5s ease;
   }
 }
 @keyframes rotate {
   0% {
-      transform: rotate(0deg)
+    transform: rotate(0deg);
   }
   100% {
-      transform: rotate(360deg)
+    transform: rotate(360deg);
   }
 }
 
 .search-btn {
-  background: -webkit-linear-gradient(left, #00AAFF, #{$primaryColor});
+  background: -webkit-linear-gradient(left, #00aaff, #{$primaryColor});
   box-shadow: 0 10px 20px -8px rgba(42, 132, 255, 0.4);
   height: 88px;
   line-height: 88px;
@@ -104,4 +106,28 @@
   .tab-content {
     height: 350px;
   }
+}
+.advs-banner-bd {
+  height: 120px;
+  margin: 30px 20px;
+  .item {
+    width: 100%;
+    height: 120px;
+  }
+  .img {
+    width: 100%;
+    height: 120px;
+    border-radius: 20px;
+  }
+}
+
+.flight-info {
+  display: block;
+  margin: 42px auto 0;
+  background: url(https://pic.c-ctrip.com/train/zt/wechat/flight-guart_v2.png);
+  width: 542px;
+  height: 116px;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-bottom: 60px;
 }
