兼容支付宝

--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -29,7 +29,7 @@
     font-size: 26px;
     color: #666;
     float: right;
-    margin-top: 20px;
+    // margin-top: 20px;
     position: absolute;
     right: 40px;
   }
