--- a/src/pages/flight/index/index.scss
+++ b/src/pages/flight/index/index.scss
@@ -1,142 +1,145 @@
 @import "../../../assets/iconfont/iconfont.css";
 
-.flight-top {
-  background: #fff;
-  position: relative;
-  z-index: 10;
-  margin: 0 20px;
-  border-radius: 20px;
-  padding: 30px 40px 40px;
-  box-shadow: 0 10px 20px -4px rgba(0, 0, 0, 0.1);
-  border-left: 1px solid #efefef;
-  border-right: 1px solid #efefef;
-  margin-top: 168px;
-  .item {
-    font-size: 44px;
+.flight-container {
+  .flight-top {
+    background: #fff;
     position: relative;
-    font-weight: 600;
-    height: 112px;
-    line-height: 112px;
-    border-bottom: 1px solid #eee;
-    display: flex;
-    &.date {
-      border-bottom: none !important;
+    z-index: 10;
+    margin: 0 20px;
+    border-radius: 20px;
+    padding: 30px 40px 40px;
+    box-shadow: 0 10px 20px -4px rgba(0, 0, 0, 0.1);
+    border-left: 1px solid #efefef;
+    border-right: 1px solid #efefef;
+    margin-top: 168px;
+    .item {
+      font-size: 44px;
+      position: relative;
+      font-weight: 600;
+      height: 112px;
+      line-height: 112px;
+      border-bottom: 1px solid #eee;
+      display: flex;
+      &.date {
+        border-bottom: none !important;
+      }
     }
   }
-}
-.station .from,
-.station .to {
-  width: 45%;
-  opacity: 1;
-  transition: all 0.5s ease-out;
-}
-.flight .station .from,
-.flight .station .to {
-  transition: all 0.4s ease-out;
-  width: 50%;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.flight .station .from {
-  padding-right: 5%;
-  padding-left: 0;
-}
-.flight .station .to {
-  padding-left: 5%;
-  padding-right: 0;
-}
-.station .to {
-  text-align: right;
-  right: 0px;
-}
-.station .from.exchange {
-  transform: translate3d(100%, 0, 0);
-  text-align: right;
-}
-.station .to.exchange {
-  transform: translate3d(-100%, 0, 0);
-  text-align: left;
-}
-.station .from.slide {
-  transform: translate3d(40%, 0, 0);
-  text-align: right;
-  opacity: 0;
-}
-.station .to.slide {
-  transform: translate3d(-40%, 0, 0);
-  text-align: left;
-  opacity: 0;
-}
-.icon-zhihuan {
-  flex: 1;
-  text-align: center;
-  font-size: 40px;
-  line-height: 110px;
-  font-weight: bolder;
-}
-
-.icon-zhihuan {
-  &.active {
-    animation: rotate 0.5s ease;
+  .station .from,
+  .station .to {
+    width: 45%;
+    opacity: 1;
+    transition: all 0.5s ease-out;
   }
-}
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
+  .flight .station .from,
+  .flight .station .to {
+    transition: all 0.4s ease-out;
+    width: 50%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
-  100% {
-    transform: rotate(360deg);
+  .flight .station .from {
+    padding-right: 5%;
+    padding-left: 0;
   }
-}
-
-.search-btn {
-  background: -webkit-linear-gradient(left, #00aaff, #{$primaryColor});
-  box-shadow: 0 10px 20px -8px rgba(42, 132, 255, 0.4);
-  height: 88px;
-  line-height: 88px;
-  color: #fff;
-  font-size: 40px;
-  font-weight: 600;
-  border-radius: 88px;
-  margin-top: 10px;
-}
-
-.flight-index-tab {
-  .tab-content {
-    height: 350px!important;
+  .flight .station .to {
+    padding-left: 5%;
+    padding-right: 0;
   }
-}
-.advs-banner-bd {
-  height: 120px;
-  // 支付宝有问题
-  // margin: 30px 20px;
-  .item {
-    width: 100%;
+  .station .to {
+    text-align: right;
+    right: 0px;
+  }
+  .station .from.exchange {
+    transform: translate3d(100%, 0, 0);
+    text-align: right;
+  }
+  .station .to.exchange {
+    transform: translate3d(-100%, 0, 0);
+    text-align: left;
+  }
+  .station .from.slide {
+    transform: translate3d(40%, 0, 0);
+    text-align: right;
+    opacity: 0;
+  }
+  .station .to.slide {
+    transform: translate3d(-40%, 0, 0);
+    text-align: left;
+    opacity: 0;
+  }
+  .icon-zhihuan {
+    flex: 1;
+    text-align: center;
+    font-size: 40px;
+    line-height: 110px;
+    font-weight: bolder;
+  }
+  
+  .icon-zhihuan {
+    &.active {
+      animation: rotate 0.5s ease;
+    }
+  }
+  @keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .search-btn {
+    background: -webkit-linear-gradient(left, #00aaff, #{$primaryColor});
+    box-shadow: 0 10px 20px -8px rgba(42, 132, 255, 0.4);
+    height: 88px;
+    line-height: 88px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 600;
+    border-radius: 88px;
+    margin-top: 10px;
+  }
+  
+  .flight-index-tab {
+    .tab-content {
+      height: 350px!important;
+    }
+  }
+  .advs-banner-bd {
     height: 120px;
+    // 支付宝有问题
+    // margin: 30px 20px;
+    .item {
+      width: 100%;
+      height: 120px;
+    }
+    .img {
+      width: 100%;
+      height: 120px;
+      border-radius: 20px;
+    }
   }
-  .img {
-    width: 100%;
-    height: 120px;
-    border-radius: 20px;
+  
+  .flight-info {
+    display: block;
+    margin: 42px auto 0;
+    background: url(https://pic.c-ctrip.com/train/zt/wechat/flight-guart_v2.png);
+    width: 542px;
+    height: 116px;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    padding-bottom: 60px;
+  }
+  .no-data {
+    margin: 0;
+  }
+  
+  // 支付宝样式兼容
+  .alipay-swiper {
+    margin: 30px 20px;
   }
 }
 
-.flight-info {
-  display: block;
-  margin: 42px auto 0;
-  background: url(https://pic.c-ctrip.com/train/zt/wechat/flight-guart_v2.png);
-  width: 542px;
-  height: 116px;
-  background-repeat: no-repeat;
-  background-size: 100%;
-  padding-bottom: 60px;
-}
-.no-data {
-  margin: 0;
-}
-
-// 支付宝样式兼容
-.alipay-swiper {
-  margin: 30px 20px;
-}
