--- a/src/pages/flight/list/list.scss
+++ b/src/pages/flight/list/list.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   overflow: hidden;
   background-color: #efefef;
+  position: relative;
   .calendar-scroll-list {
     width: 100%;
     white-space: nowrap;
