--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,6 +9,7 @@
   .input {
     width: 100%;
     height: 110px;
+    line-height: 110px;
     font-size: 36px;
     // font-weight: 600;
     border-bottom: 1px solid #eee;
@@ -25,5 +26,13 @@
   }
   .placeholer-class {
     color: #ccc;
+  }
+}
+// H5样式兼容
+.env-h5-page {
+  .login-container {
+    .weui-input {
+      height: 100%;
+    }
   }
 }
