--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -94,21 +94,21 @@
           background-position: -200px -300px;
         }
       }
-      &.current ~ .scrollbar {
+      &.current~.scrollbar {
         z-index: 2;
       }
-      &:nth-of-type(1).current ~ .scrollbar {
-        transform: translate3d(0, 0, 0);
-      }
-      &:nth-of-type(2).current ~ .scrollbar {
-        transform: translate3d(100%, 0, 0);
-      }
-      &:nth-of-type(3).current ~ .scrollbar {
-        transform: translate3d(200%, 0, 0);
-      }
-      &:nth-of-type(4).current ~ .scrollbar {
-        transform: translate3d(300%, 0, 0);
-      }
+      // &:nth-of-type(1).current~.scrollbar {
+      //   transform: translate3d(0, 0, 0);
+      // }
+      // &:nth-of-type(2).current~.scrollbar {
+      //   transform: translate3d(100%, 0, 0);
+      // }
+      // &:nth-of-type(3).current~.scrollbar {
+      //   transform: translate3d(200%, 0, 0);
+      // }
+      // &:nth-of-type(4).current~.scrollbar {
+      //   transform: translate3d(300%, 0, 0);
+      // }
     }
   }
   .no-exploit {
